<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_sun_tornado"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/txt_20sp_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtPrize"
            style="@style/txt_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:text="@string/prize_2x"
            android:textAlignment="center"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/txtTimer"
            style="@style/txt_18sp_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPrize"
            android:text="@string/time_10_10_m"
            android:textAlignment="center"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTimer"
            android:backgroundTint="@color/white"
            android:text="@string/view_details_join"
            android:textColor="@color/black" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>