<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.mainActivityFragments.MenuFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical" >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtProfile"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_details"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtYourTicket"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_ticket"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtKyc"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kyc"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtAddBank"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_bank_upi"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtWithdrawal"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/withdrawal"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtHistory"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtHelp"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtHTB"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_buy_ticket"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtShare"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnLogOut"
                    style="@style/txt_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textAllCaps="false"
                    app:drawableEndCompat="@drawable/ic_baseline_double_arrow_24" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>