<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.menusFragment.HelpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/txt01"
                    style="@style/txt_18sp_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textOff="@string/how_to_add_cash"
                    android:textOn="@string/how_to_add_cash" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtHelp01"
                style="@style/txt_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/txt02"
                    style="@style/txt_18sp_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textOff="@string/how_to_withdraw_winning_cash"
                    android:textOn="@string/how_to_withdraw_winning_cash" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtHelp02"
                style="@style/txt_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/txt03"
                    style="@style/txt_18sp_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textOff="@string/how_to_do_kyc"
                    android:textOn="@string/how_to_do_kyc" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtHelp03"
                style="@style/txt_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/txt04"
                    style="@style/txt_18sp_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textOff="@string/how_to_use_bonus_balance"
                    android:textOn="@string/how_to_use_bonus_balance" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtHelp04"
                style="@style/txt_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/txt05"
                    style="@style/txt_18sp_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textOff="@string/how_to_add_bank_and_upi"
                    android:textOn="@string/how_to_add_bank_and_upi" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtHelp05"
                style="@style/txt_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/txt06"
                    style="@style/txt_18sp_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textOff="@string/send_query_and_reports"
                    android:textOn="@string/send_query_and_reports" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/txtHelp06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/eTxtSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_for_editext"
                    android:ems="10"
                    android:hint="@string/subject"
                    android:inputType="textMultiLine"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/eTxtMass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_for_editext"
                    android:ems="10"
                    android:hint="@string/massage"
                    android:inputType="textMultiLine"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/black"
                    android:text="Send"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>